Added drifting clouds in the background

--- a/README
+++ b/README
@@ -12,3 +12,6 @@ http://www.openclipart.org/detail/1509
 
 login.svg is by "warszawianka":
 http://www.openclipart.org/detail/30667
+
+cloud.svg is by "warszawianka":
+<TBD Fill me in>
