Added start of a busy/loading screen + updated credits in README

--- a/README
+++ b/README
@@ -10,8 +10,8 @@ Depends on Qt and QML.
 box.svg is a modified version of work by "molumen, Jack123 / molumen":
 http://www.openclipart.org/detail/1509
 
-login.svg is by "warszawianka":
+login.svg is by "warszawianka" (Tango Project is likely the source):
 http://www.openclipart.org/detail/30667
 
-cloud.svg is by "warszawianka":
-<TBD Fill me in>
+cloud.svg is by a modified version of work by "warszawianka" (Tango Project is likely the source):
+http://www.openclipart.org/detail/30085
